--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,25 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
 # See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
-
-    jobs:
-      build:
-        docker:
-          - image: circleci/python:3.7
-
-        working_directory: ~/devops
+version: 2
+  jobs:
+    build:
+      docker:
+        - image: circleci/python:3.7
+    working_directory: ~/devops
+steps:
+- checkout
+- run
+    name: install dependencies
+    command: |
+              python3 -m venv venv
+              . venv/bin/activate
+              pip install -r requirements.txt
+- run
+    name: run tests
+    command: |
+              . venv/bin/activate
+              flake8 –-exclude=venv* --statistics
+# pytest -v –-cov=calculator
+pytest –-junitxml=test-results/junit.xml
+- store_test_results:
+path: test-results
